# Doc

./: Cargo.toml
src/: config.rs  language.rs  lib.rs  lines.rs
src/lines/: action.rs  config.rs  cursor.rs  delta_compute.rs  diff.rs  edit.rs  encoding.rs  fold.rs  indent.rs  layout.rs  line.rs  line_ending.rs  mod.rs  phantom_text.rs  screen_lines.rs  selection.rs  signal.rs  style.rs  util.rs  word.rs
src/lines/buffer/: mod.rs  rope_text.rs
src/lines/line/: update_lines.rs
src/syntax/: edit.rs  highlight.rs  mod.rs
tests/: test_delta.rs  test_folding.rs  test_lines.rs  test_phantom.rs
tests/lines_util/: _init.rs  mod.rs  semantic.rs  util.rs
