[package]
name = "doc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde             = { version = "1.0" }
serde_json        = { version = "1.0" }
lsp-types = { version = "0.95.1", features = ["proposed"] }
im                = { version = "15.0.0", features = ["serde"] }
smallvec          = { version = "1.13.2" }
itertools = "0.12.1"
slotmap     = "1.0"
tree-sitter = "0.22.6"
ahash       = "0.8.11"
hashbrown   = { version = "0.14.5", features = ["raw"] }
regex             = { version = "1.10.5" }
strum             = { version = "0.26.2" }
strum_macros      = { version = "0.26.2" }
thiserror         = { version = "1.0" }
libloading  = "0.8.1"
directories       = { version = "4.0.1" }
arc-swap    = "1.6.0"
log = "0.4.22"
anyhow            = { version = "1.0" }
memchr = "2.7.1"
unicode-segmentation = "1.12.0"

#lapce-xi-rope = { version = "0.3.2", features = ["serde"] }
#lapce-xi-rope = {path = "../xi-editor", features = ["serde"]}
lapce-xi-rope = {git = "https://github.com/jm-observer/xi-editor.git", features = ["serde"]}
floem = { git="https://github.com/jm-observer/floem.git", branch = "main-fork", features = ["editor", "serde", "default-image-formats", "rfd-async-std", "vger"], default-features = false }
#floem-editor-core = {  path="../floem/editor-core", features = ["serde"] }
#cosmic-text = { git = "https://github.com/pop-os/cosmic-text.git", features = ["shape-run-cache"], rev = "4fe90bb"  }
# 2024-12-20
#floem = { version = "0.2.0" , features = ["serde"]}
#floem-editor-core = {  version = "0.2.0" }
cosmic-text = { version = "0.12.1", features = ["shape-run-cache"] }


[dev-dependencies]
custom-utils = "0.10.16"

#[build-dependencies]
#anyhow            = { version = "1.0" }
#custom-utils = "0.10.16"
#floem = { path="../floem" }

[patch.crates-io]
custom-utils = {path = "../custom-utils"}
#floem = { path="../floem-lapce" }

[patch."https://github.com/jm-observer/xi-editor.git"]
lapce-xi-rope = {path = "../xi-editor"}
[patch."https://github.com/jm-observer/floem.git"]
floem = { path="../floem" }
